--- a/spring-boot-simple-redis/src/main/resources/application.properties
+++ b/spring-boot-simple-redis/src/main/resources/application.properties
@@ -15,6 +15,24 @@ spring.redis.lettuce.pool.max-idle=8
 # 连接池中的最小空闲连接 默认 0
 spring.redis.lettuce.pool.min-idle=0
 
+# -----------------------------------
+
+redis.port=6379
+redis.password=
+redis.timeout=10000
+redis.maxIdle=300  
+#redis.maxActive=600
+redis.maxTotal=1000  
+redis.maxWaitMillis=1000  
+redis.minEvictableIdleTimeMillis=300000  
+redis.numTestsPerEvictionRun=1024  
+redis.timeBetweenEvictionRunsMillis=30000  
+redis.testOnBorrow=true  
+redis.testWhileIdle=true
+spring.redis.cluster.nodes=ip\:post,ip\:post...
+spring.redis.cluster.max-redirects=3
+# -----------------------------------
+
 ###datasource
 spring.datasource.url=jdbc:mysql:///fantasticfunicular?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
