--- a/spring-boot-simple-error/pom.xml
+++ b/spring-boot-simple-error/pom.xml
@@ -9,13 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.supertrampai</groupId>
-    <artifactId>spring-boot-simple-tomcat</artifactId>
+    <artifactId>spring-boot-simple-error</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-boot-simple-tomcat</name>
+    <name>spring-boot-simple-error</name>
     <description>Demo project for Spring Boot</description>
-
-    <!--在这里设置打包类型为pom，作用是为了实现多模块项目-->
-    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -34,9 +31,17 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>28.1-jre</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
         </dependency>
 
     </dependencies>
@@ -47,31 +52,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
-            <!--<plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <port>9090</port>
-                    <path>/</path>
-                    <uriEncoding>UTF-8</uriEncoding>
-                    <server>tomcat7</server>
-                    <ignorePackaging>true</ignorePackaging>
-                </configuration>
-            </plugin>-->
-
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <port>8080</port>
-                    <path>/</path>
-                    <ignorePackaging>true</ignorePackaging>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 
