--- a/spring-boot-simple-mail/src/main/resources/application.properties
+++ b/spring-boot-simple-mail/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# //邮箱服务器地址
+# //邮箱服务器地址  smtp.mxhichina.com  端口25， SSL 加密端口465
 spring.mail.host=smtp.aliyun.com
 
 # //邮箱的用户名
@@ -22,3 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # //以谁来发送邮件
 mail.fromMail.addr=mail address
+
+
+
+# gitlab_rails['gitlab_email_from'] = 'username@your domain' gitlab_rails['smtp_enable'] = true gitlab_rails['smtp_address'] = "smtpdm.aliyun.com" gitlab_rails['smtp_port'] = 80 gitlab_rails['smtp_user_name'] = "username@your domain" gitlab_rails['smtp_password'] = "password" gitlab_rails['smtp_domain'] = "your domain" gitlab_rails['smtp_authentication'] = "login"
